Update pine64-4.9 for lieonl.yml

--- a/.github/workflows/pine64-4.9 for lieonl.yml
+++ b/.github/workflows/pine64-4.9 for lieonl.yml
@@ -11,14 +11,14 @@ on:
   release:
     types: [published]
 
-  #push:
-    #branches: 
-      #- master
+  push:
+    branches: 
+      - master
 
   #star
   
-  #schedule:
-  #  - cron: 0 8 * * 5
+  schedule:
+    - cron: 0 8 * * *
   
   #watch:
   #  types: [started]
