--- a/.github/workflows/immortalwrt1806.yml
+++ b/.github/workflows/immortalwrt1806.yml
@@ -5,7 +5,7 @@
 # Youtube Channel: https://goo.gl/fvkdwm 
 #=================================================
 
-name: lieonl 4.9 -pine64
+name: immortalwrt1806 x86
 
 on: 
   release:
