--- a/.github/workflows/pine64-4.9 for lieonl.yml
+++ b/.github/workflows/pine64-4.9 for lieonl.yml
@@ -79,6 +79,7 @@ jobs:
       run: |
         cd openwrt/package
         git clone https://github.com/aa65535/openwrt-redsocks2.git
+        mkdir lean
         cd lean
         git clone https://github.com/jerrykuku/lua-maxminddb.git  #git lua-maxminddb 依赖
         git clone https://github.com/jerrykuku/luci-app-vssr.git
