--- a/.github/workflows/pine64-4.9 for lieonl.yml
+++ b/.github/workflows/pine64-4.9 for lieonl.yml
@@ -11,11 +11,11 @@ on:
   release:
     types: [published]
 
-  push:
+ push:
     branches: 
       - master
 
-  #star
+star
   
   #schedule:
     - cron: 0 8 * * 3
