Update pine64-4.9 for lieonl.yml

--- a/.github/workflows/pine64-4.9 for lieonl.yml
+++ b/.github/workflows/pine64-4.9 for lieonl.yml
@@ -11,9 +11,9 @@ on:
   release:
     types: [published]
 
- push:
-    branches: 
-      - master
+ #push:
+    #branches: 
+      #- master
 
 star
   
