--- a/.github/workflows/pine64-4.9 for lieonl.yml
+++ b/.github/workflows/pine64-4.9 for lieonl.yml
@@ -15,10 +15,10 @@ on:
     #branches: 
       #- master
 
-star
+
   
   #schedule:
-    - cron: 0 8 * * 3
+    #- cron: 0 8 * * 3
   
   watch:
     types: [started]
