--- a/.github/workflows/x86 master5.15 for lienol.yml
+++ b/.github/workflows/x86 master5.15 for lienol.yml
@@ -63,7 +63,7 @@ jobs:
     - name: Clone source code
       env: 
         REPO_URL: https://github.com/Lienol/openwrt
-        REPO_BRANCH: 19.07
+        REPO_BRANCH: master
       run: |
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         
