--- a/.github/workflows/x86 master5.15 for lienol.yml
+++ b/.github/workflows/x86 master5.15 for lienol.yml
@@ -11,14 +11,14 @@ on:
   release:
     types: [published]
 
-  push:
-    branches: 
-      - master
+  #push:
+    #branches: 
+      #- master
 
   ##star
   
   #schedule:
-    - cron: 0 8 * * 3
+    #- cron: 0 8 * * 3
   
   watch:
     types: [started]
